show notes table
todolist

--- a/css/base.css
+++ b/css/base.css
@@ -4,3 +4,12 @@
 .tac {
   text-align: center;
 }
+.lf {
+  font-size: 14px;
+}
+.important-color {
+  color: #f40;
+}
+.m15tb {
+  margin-top: 15px;
+}
