--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ textarea:focus {
 .todo-entry:nth-child(1) {
   background: rgba(127, 127, 255, 0.65);
 }
+
 .todo-entry:nth-child(1) li {
   border-left: 1px solid #88f;
   border-right: 1px solid #88f;
@@ -156,16 +157,22 @@ textarea:focus {
 }
 
 .todo-entry li:nth-child(2) {
-  width: 30%;
+  width: 30px;
+  max-width: 30px;
+  min-width: 30px;
 }
 
 .todo-entry li:nth-child(3) {
-  width: 70%;
+  width: 30%;
 }
 
 .todo-entry li:nth-child(4) {
+  width: 70%;
+}
+
+.todo-entry li:nth-child(5) {
   width: 140px;
-  max-width: 140px;
+  min-width: 140px;
   text-align: center;
 }
 /*
